mywork/force-app/main/default/objects/ALMSettings__c/ALMSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ALM Settings</label>
</CustomObject>