mywork/force-app/main/default/objects/ALMSettings__c/fields/Enable_Custom_Backlogs__c.field-meta.xml
<CustomField>
    <fullName>Enable_Custom_Backlogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls accessibility to custom backlogs</description>
    <label>Enable Custom Backlogs</label>
    <type>Checkbox</type>
</CustomField>