mywork/force-app/main/default/objects/ALMSettings__c/fields/Inactive_Backlog_Statuses_1__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Backlog_Statuses_1__c</fullName>
    <description>Backlog Item statuses to exclude from the Backlog management application. Separate statuses by ";~". Use 2nd field for overflow.</description>
    <inlineHelpText>Backlog Item statuses to exclude from the Backlog management application. Separate statuses by ";~". Use 2nd field for overflow.</inlineHelpText>
    <label>Inactive Backlog Statuses 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>