mywork/force-app/main/default/objects/ALMSettings__c/fields/Inactive_Backlog_Statuses_2__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Backlog_Statuses_2__c</fullName>
    <description>Backlog Item statuses to exclude from the Backlog management application. Separate statuses by ";~".</description>
    <inlineHelpText>Backlog Item statuses to exclude from the Backlog management application. Separate statuses by ";~".</inlineHelpText>
    <label>Inactive Backlog Statuses 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>