mywork/force-app/main/default/objects/ALMSettings__c/fields/JIRA_Default_Username__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Default_Username__c</fullName>
    <description>The default username used to assign any records to</description>
    <inlineHelpText>The default username used to assign any records to</inlineHelpText>
    <label>JIRA Default Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>