mywork/force-app/main/default/objects/ALMSettings__c/fields/JIRA_Integration_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Integration_Last_Run__c</fullName>
    <description>Stores the time the integration pulling from JIRA has run</description>
    <label>JIRA Integration Last Run Time</label>
    <type>DateTime</type>
</CustomField>