mywork/force-app/main/default/objects/ALMSettings__c/fields/JIRA_Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Sync_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then the JIRA integration is enabled</description>
    <inlineHelpText>If checked then the JIRA integration is enabled</inlineHelpText>
    <label>JIRA Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>