mywork/force-app/main/default/objects/ALMSettings__c/fields/JIRA_Sync_Interval__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Sync_Interval__c</fullName>
    <description>How often the integrations should run (per hour)</description>
    <inlineHelpText>How often the integrations should run (per hour)</inlineHelpText>
    <label>JIRA Sync Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>