mywork/force-app/main/default/objects/ALMSettings__c/fields/Last_Log_Export_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Log_Export_Time__c</fullName>
    <description>Stores the last time that any error logs were exported</description>
    <label>Last Log Export Time</label>
    <type>DateTime</type>
</CustomField>