mywork/force-app/main/default/objects/ALMSettings__c/fields/Snapshot_Location__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Location__c</fullName>
    <description>The location of metadata snapshots for this company.</description>
    <label>Snapshot Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>