mywork/force-app/main/default/objects/ALMSettings__c/fields/Sync_History_Retention__c.field-meta.xml
<CustomField>
    <fullName>Sync_History_Retention__c</fullName>
    <description>The number of days that ALM Application Results will be kept. Results will be kept indefinitely if this is set to 0.</description>
    <inlineHelpText>The number of days that ALM Application Results will be kept. Results will be kept indefinitely if this is set to 0.</inlineHelpText>
    <label>Sync History Retention</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>