mywork/force-app/main/default/objects/ALMSettings__c/fields/VCS_Integration_Enabled__c.field-meta.xml
<CustomField>
    <fullName>VCS_Integration_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabled VC Integration in Sightline.</description>
    <inlineHelpText>Enable VC Integration in Sightline when checked.</inlineHelpText>
    <label>VC Integration Enabled</label>
    <type>Checkbox</type>
</CustomField>