mywork/force-app/main/default/objects/ALMSettings__c/fields/Web_Service_Domain__c.field-meta.xml
<CustomField>
    <fullName>Web_Service_Domain__c</fullName>
    <description>Full url for alm web services, i.e 'https://tools.bluewolf.com'</description>
    <inlineHelpText>Full url for alm web services, i.e 'https://tools.bluewolf.com'</inlineHelpText>
    <label>Web Service Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>